# Modular-Bootloader

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE-APACHE  README.md  memory.md
boot/: stage2.asm
include/: extsucs_types.h  extsutf_fixed.h  io.h  mbl_core.h  mbl_framebuffer.h  mbl_gui.h  sucs_mode.h  sucs_types.h  sutf16.h  sutf8.h  vsutf.h
mbl/boot/: stage1.asm
mbl/include/: esutf.h  mbl_sutf_gui.h  sutf.h
mbl/src/: esutf.c  mbl_framebuffer.c  mbl_gui.c  sucs_mode.c  sucs_string.c  sutf16.c  sutf_decode.c  vsutf.c
src/: extsutf_fixed.c  mbl_core.c  mbl_loader.c  mbl_sutf_gui.c  sutf8.c  sutf_encode.c
